# azure-demo

./: Makefile
configservice/: Cargo.toml  Dockerfile  Makefile
configservice/src/: configservice.rs  main.rs
