[package]
name = "config-manager"
description = "Silly actix-web / rust openApi example api with utoipa and Swagger"
version = "0.1.0"
edition = "2021"
authors = [
  "Developer <dev@ .com>"
]
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
futures = "0.3"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }

[workspace]
